--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "wp-content/themes/huskies-theme/fontAwesome"]
 	path = wp-content/themes/huskies-theme/fontAwesome
 	url = https://github.com/FortAwesome/Font-Awesome.git
+[submodule "wp-content/themes/huskies-theme/photobox"]
+	path = wp-content/themes/huskies-theme/photobox
+	url = https://github.com/yairEO/photobox.git
