--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ultimate-Huskies/website",
+  "name": "UltimateHuskiesWebsite",
   "type": "Website",
   "license": "MIT",
   "description": "A modern WordPress site for the ultimate frisbee team Ultime Huskies",
