--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "UltimateHuskiesWebsite",
   "dependencies": {
     "jquery": "~2.1.4",
-    "photobox": "~1.9.9"
+    "photobox": "~1.9.9",
+    "normalize.css": "~3.0.3"
   }
 }
