--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "photobox": "~1.9.9",
-    "normalize.css": "~3.0.3",
+    "normalize.css": "~3.0.3"
   }
 }
