--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,6 @@
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "^4.5",
     "wpackagist-plugin/bbPress": "^2.5",
-    "wpackagist-plugin/bbpress-pencil-unread": "^1.0",
     "wpackagist-plugin/bbpress-post-toolbar": "^0.7.5",
     "wpackagist-plugin/gd-bbpress-attachments": "^2.3.1",
     "wpackagist-plugin/gd-bbpress-tools": "^1.8",
@@ -44,10 +43,12 @@
     "wpackagist-plugin/really-simple-captcha": "^1.8.0.1",
     "wpackagist-plugin/confirm-user-registration": "^2.1",
     "wpackagist-plugin/mappress-google-maps-for-wordpress": "^2.43",
-    "wpackagist-plugin/shariff": "^3.4",
+    "wpackagist-plugin/shariff": "^4.3",
     "wpackagist-plugin/imsanity": "^2.3",
     "wpackagist-plugin/mailgun": "^1.4",
-    "wpackagist-plugin/minimum-password-strength": "^1.2"
+    "wpackagist-plugin/minimum-password-strength": "^1.2",
+    "wpackagist-plugin/bbpress-pencil-unread": "1.0",
+    "wpackagist-plugin/backwpup": "^3.3"
   },
   "extra": {
     "installer-paths": {
