--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "wpackagist-plugin/gd-bbpress-attachments": "^3.1",
     "wpackagist-plugin/gd-bbpress-tools": "^2.1",
     "ultimate-huskies/bbpress-digest": "dev-master",
-    "wpackagist-plugin/google-calendar-events": "^3.0.8",
+    "wpackagist-plugin/google-calendar-events": "3.1.22",
     "wpackagist-plugin/contact-form-7": "^5.1.3",
     "wpackagist-plugin/limit-login-attempts": "^1.7",
     "wpackagist-plugin/simple-local-avatars": "^2.0",
@@ -48,7 +48,8 @@
     "wpackagist-plugin/mailgun": "^1.4",
     "wpackagist-plugin/minimum-password-strength": "^1.2",
     "wpackagist-plugin/bbpress-pencil-unread": "^1.0",
-    "wpackagist-plugin/backwpup": "^3.3"
+    "wpackagist-plugin/backwpup": "^3.3",
+    "wpackagist-plugin/updraftplus": "^1.16"
   },
   "extra": {
     "installer-paths": {
