--- a/composer.json
+++ b/composer.json
@@ -1,62 +1,68 @@
 {
-  "name": "ultimate-huskies/website",
-  "type": "website",
-  "license": "MIT",
-  "description": "A modern WordPress site for the ultimate frisbee team Ultime Huskies",
-  "homepage": "http://ultimate-huskies.de/",
-  "authors": [
-    {
-      "name": "Patrick Müller",
-      "email": "dev@mupat.net",
-      "homepage": "http://mupat.net"
-    }
-  ],
-  "config": {
-    "preferred-install": "dist",
-    "secure-http": false
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "http://wpackagist.org"
+    "name": "ultimate-huskies/website",
+    "type": "website",
+    "license": "MIT",
+    "description": "A modern WordPress site for the ultimate frisbee team Ultime Huskies",
+    "homepage": "http://ultimate-huskies.de/",
+    "authors": [
+        {
+            "name": "Patrick Müller",
+            "email": "dev@mupat.net",
+            "homepage": "http://mupat.net"
+        }
+    ],
+    "config": {
+        "preferred-install": "dist",
+        "secure-http": false
     },
-    {
-      "type": "vcs",
-      "url": "https://github.com/Ultimate-Huskies/bbpress-digest"
-    }
-  ],
-  "require": {
-    "php": ">=5.4",
-    "composer/installers": "~1.0.12",
-    "timber/timber": "^0.21.6",
-    "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "^5",
-    "wpackagist-plugin/bbpress": "^2.5",
-    "wpackagist-plugin/bbpress-post-toolbar": "^0.7.5",
-    "wpackagist-plugin/gd-bbpress-attachments": "^3.1",
-    "wpackagist-plugin/gd-bbpress-tools": "^2.1",
-    "ultimate-huskies/bbpress-digest": "dev-master",
-    "wpackagist-plugin/google-calendar-events": "3.1.22",
-    "wpackagist-plugin/contact-form-7": "^5.1.3",
-    "wpackagist-plugin/limit-login-attempts": "^1.7",
-    "wpackagist-plugin/simple-local-avatars": "^2.0",
-    "wpackagist-plugin/really-simple-captcha": "^2.0.2",
-    "wpackagist-plugin/confirm-user-registration": "^2.1",
-    "wpackagist-plugin/mappress-google-maps-for-wordpress": "^2.43",
-    "wpackagist-plugin/shariff": "^4.3",
-    "wpackagist-plugin/imsanity": "^2.3",
-    "wpackagist-plugin/mailgun": "^1.4",
-    "wpackagist-plugin/minimum-password-strength": "^1.2",
-    "wpackagist-plugin/bbpress-pencil-unread": "^1.0",
-    "wpackagist-plugin/backwpup": "^3.3",
-    "wpackagist-plugin/updraftplus": "^1.16"
-  },
-  "extra": {
-    "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin", "timber/timber"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://wpackagist.org"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Ultimate-Huskies/bbpress-digest"
+        }
+    ],
+    "require": {
+        "php": ">=5.4",
+        "composer/installers": "~1.0.12",
+        "timber/timber": "^0.21.6",
+        "vlucas/phpdotenv": "^2.0.1",
+        "johnpbloch/wordpress": "^5",
+        "wpackagist-plugin/bbpress": "^2.5",
+        "wpackagist-plugin/bbpress-post-toolbar": "^0.7.5",
+        "wpackagist-plugin/gd-bbpress-attachments": "^3.1",
+        "wpackagist-plugin/gd-bbpress-tools": "^2.1",
+        "ultimate-huskies/bbpress-digest": "dev-master",
+        "wpackagist-plugin/google-calendar-events": "3.1.22",
+        "wpackagist-plugin/contact-form-7": "^5.1.3",
+        "wpackagist-plugin/limit-login-attempts": "^1.7",
+        "wpackagist-plugin/simple-local-avatars": "^2.0",
+        "wpackagist-plugin/really-simple-captcha": "^2.0.2",
+        "wpackagist-plugin/confirm-user-registration": "^2.1",
+        "wpackagist-plugin/mappress-google-maps-for-wordpress": "^2.43",
+        "wpackagist-plugin/shariff": "^4.3",
+        "wpackagist-plugin/imsanity": "^2.3",
+        "wpackagist-plugin/mailgun": "^1.4",
+        "wpackagist-plugin/minimum-password-strength": "^1.2",
+        "wpackagist-plugin/bbpress-pencil-unread": "^1.0",
+        "wpackagist-plugin/updraftplus": "^1.16"
     },
-    "wordpress-install-dir": "web/wp"
-  }
+    "extra": {
+        "installer-paths": {
+            "web/app/mu-plugins/{$name}/": [
+                "type:wordpress-muplugin",
+                "timber/timber"
+            ],
+            "web/app/plugins/{$name}/": [
+                "type:wordpress-plugin"
+            ],
+            "web/app/themes/{$name}/": [
+                "type:wordpress-theme"
+            ]
+        },
+        "wordpress-install-dir": "web/wp"
+    }
 }
