--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
     ],
     "config": {
         "preferred-install": "dist",
-        "secure-http": false
+        "secure-http": false,
+        "allow-plugins": {
+            "johnpbloch/wordpress-core-installer": true,
+            "composer/installers": true
+        }
     },
     "repositories": [
         {
@@ -36,7 +40,7 @@
         "wpackagist-plugin/gd-bbpress-attachments": "^3.1",
         "wpackagist-plugin/gd-bbpress-tools": "^2.1",
         "ultimate-huskies/bbpress-digest": "dev-master",
-        "wpackagist-plugin/google-calendar-events": "3.1.22",
+        "wpackagist-plugin/google-calendar-events": "3.1.36",
         "wpackagist-plugin/contact-form-7": "^5.1.3",
         "wpackagist-plugin/limit-login-attempts": "^1.7",
         "wpackagist-plugin/simple-local-avatars": "^2.0",
